Corrected reversed or un-matched quote marks

--- a/007.md
+++ b/007.md
@@ -49,7 +49,7 @@ Well, he had—Harry glanced at his watch—one whole hour to figure it out, sin
 
 His father frowned. “Hm… maybe look for a trail of mixed footprints on the ground, leading somewhere that doesn’t seem to make sense—”
 
-”*Dad!*” Harry said. “Stop that! I haven’t even *tried* to figure it out on my own!” It was a very good suggestion, too, which was worse.
+*“Dad!”* Harry said. “Stop that! I haven’t even *tried* to figure it out on my own!” It was a very good suggestion, too, which was worse.
 
 “Sorry,” his father apologised.
 
@@ -57,11 +57,11 @@ His father frowned. “Hm… maybe look for a trail of mixed footprints on the g
 
 “Maybe she was distracted,” Harry said without thinking.
 
-”*Harry!*” hissed his father and mother in unison. ”*What did you do?*”
+*“Harry!”* hissed his father and mother in unison. *“What did you do?”*
 
 “I, um—” Harry swallowed. “Look, we don’t have time for this now—”
 
-”*Harry!*”
+*“Harry!”*
 
 “I mean it! We don’t have time for this now! Because it’s a really long story and I’ve got to figure out how to get to school!”
 
@@ -69,29 +69,29 @@ His mother had a hand over her face. “How bad was it?”
 
 “I, ah,” *I can’t talk about that for reasons of National Security,* “about half as bad as the Incident with the Science Project?”
 
-”*Harry!*”
+*“Harry!”*
 
 “I, er, oh look there are some people with an owl I’ll go ask them how to get in!” and Harry ran away from his parents towards the family of fiery redheads, his trunk automatically slithering behind him.
 
-The plump woman looked to him as he arrived. “Hello, dear. First time at Hogwarts? Ron’s new, too—” and then she peered closely at him. ”*Harry Potter?*”
+The plump woman looked to him as he arrived. “Hello, dear. First time at Hogwarts? Ron’s new, too—” and then she peered closely at him. *“Harry Potter?”*
 
 Four boys and a red-headed girl and an owl all swung around and then froze in place.
 
-“Oh, *come on!*” Harry protested. He’d been planning to go as Harry Verres at least until he got to Hogwarts. “I bought a sweatband and everything! How come you know who I am?”
+“Oh, *come on!”* Harry protested. He’d been planning to go as Harry Verres at least until he got to Hogwarts. “I bought a sweatband and everything! How come you know who I am?”
 
 “Yes,” Harry’s father said, coming up behind him with long easy strides, “how *do* you know who he is?” His voice indicated a certain dread.
 
 “Your picture was in the newspapers,” said one of two identical-looking twins.
 
-”*HARRY!*”
+*“HARRY!”*
 
-”*Dad!* It’s not like that! It’s ’cause I defeated the Dark Lord You-Know-Who when I was one year old!”
+*“Dad!* It’s not like that! It’s ’cause I defeated the Dark Lord You-Know-Who when I was one year old!”
 
-”*WHAT?*”
+*“WHAT?”*
 
 “Mum can explain.”
 
-”*WHAT?*”
+*“WHAT?”*
 
 “Ah… Michael dear, there are certain things I thought it would be best not to bother you with until now—”
 
@@ -101,7 +101,7 @@ Four boys and a red-headed girl and an owl all swung around and then froze in pl
 
 “And whatever you do, don’t think of an elephant.”
 
-”*George!* Ignore him, Harry dear, there’s no reason not to think of an elephant.”
+*“George!* Ignore him, Harry dear, there’s no reason not to think of an elephant.”
 
 “I’m Fred, Mum, not George—”
 
@@ -112,7 +112,7 @@ Wait a minute, it wouldn’t work *unless he believed in it?*
 It was at times like this that Harry hated his mind for actually working fast enough to realise that this was a case where “resonant doubt” applied, that is, if he’d started out thinking that he would go through the barrier he’d have been fine, only now he was worried about whether he sufficiently *believed* he’d go through the barrier, which meant that he actually *was* worried about crashing into it—
 
 
-”*Harry! Get back here, you have some explaining to do!*” That was his Dad.
+*“Harry! Get back here, you have some explaining to do!”* That was his Dad.
 
 Harry shut his eyes and ignored everything he knew about justified credibility and just tried to believe *really hard* that he’d go through the barrier and—
 
@@ -162,13 +162,13 @@ Then he shut that drawer and pulled out another drawer and drew forth black wiza
 
 “Ah…” Harry knew he was going to terribly regret asking this. “Who or what are the Chudley Cannons?”
 
-”*Who’re the Chudley Cannons?* Only the most brilliant team in the whole history of Quidditch! Sure, they finished at the bottom of the league last year, but—”
+*“Who’re the Chudley Cannons?* Only the most brilliant team in the whole history of Quidditch! Sure, they finished at the bottom of the league last year, but—”
 
 “What’s Quidditch?”
 
 Asking this was also a mistake.
 
-“So let me get this straight,” Harry said as it seemed that Ron’s explanation (with associated hand gestures) was winding down. “Catching the Snitch is worth *one hundred and fifty points?*”
+“So let me get this straight,” Harry said as it seemed that Ron’s explanation (with associated hand gestures) was winding down. “Catching the Snitch is worth *one hundred and fifty points?”*
 
 “Yeah—”
 
@@ -192,32 +192,32 @@ Ron’s face pulled into a scowl. “If you don’t like Quidditch, you don’t 
 
 A look of absolute horror was spreading over Ron’s face. “But, but if you get rid of the Snitch, how will anyone know when the game ends?”
 
-”*Buy… a… clock.* It would be a lot fairer than having the game sometimes end after ten minutes and sometimes not end for hours, and the schedule would be a lot more predictable for the spectators, too.” Harry sighed. “Oh, stop giving me that look of absolute horror, I probably won’t *actually* take the time to destroy this pathetic excuse for a national sport and remake it stronger and smarter in my own image. I’ve got way, way, *way* more important stuff to worry about.” Harry looked thoughtful. “Then again, it wouldn’t *take* much time to write up the Ninety-Five Theses of the Snitchless Reformation and nail it to a church door—”
+*“Buy… a… clock.* It would be a lot fairer than having the game sometimes end after ten minutes and sometimes not end for hours, and the schedule would be a lot more predictable for the spectators, too.” Harry sighed. “Oh, stop giving me that look of absolute horror, I probably won’t *actually* take the time to destroy this pathetic excuse for a national sport and remake it stronger and smarter in my own image. I’ve got way, way, *way* more important stuff to worry about.” Harry looked thoughtful. “Then again, it wouldn’t *take* much time to write up the Ninety-Five Theses of the Snitchless Reformation and nail it to a church door—”
 
-“Potter,” drawled a young boy’s voice, ”*what* is that on your face and *what* is standing next to you?”
+“Potter,” drawled a young boy’s voice, *“what* is that on your face and *what* is standing next to you?”
 
-Ron’s look of horror was replaced by utter hatred. ”*You!*”
+Ron’s look of horror was replaced by utter hatred. *“You!”*
 
 Harry turned his head; and indeed it was Draco Malfoy, who might have been forced to wear standard school robes, but was making up for that with a trunk looking at least as magical and far more elegant than Harry’s own, decorated in silver and emeralds and bearing what Harry guessed to be the Malfoy family crest, a beautiful fanged serpent over crossed ivory wands.
 
 “Draco!” Harry said. “Er, or Malfoy if you prefer, though that kind of sounds like Lucius to me. I’m glad to see you’re doing so well after, um, our last meeting. This is Ron Weasley. And I’m trying to go incognito, so call me, eh,” Harry looked down at his robes, “Mister Black.”
 
-”*Harry!*” hissed Ron. “You can’t use *that* name!”
+*“Harry!”* hissed Ron. “You can’t use *that* name!”
 
 Harry blinked. “Why not?” It *sounded* nicely dark, like an international man of mystery—
 
 
 “I’d say it’s a *fine* name,” said Draco, “but it belongs to the Noble and Most Ancient House of Black. I’ll call you Mr. Silver.”
 
-”*You* get away from… from Mr. Gold,” Ron said coldly, and took a forward step. “He doesn’t need to talk to the likes of you!”
+*“You* get away from… from Mr. Gold,” Ron said coldly, and took a forward step. “He doesn’t need to talk to the likes of you!”
 
 Harry raised a placating hand. “I’ll go by Mr. Bronze, thanks for the naming schema. And, Ron, um,” Harry struggled to find a way to say this, “I’m glad you’re so… enthusiastic about protecting me, but I don’t particularly mind talking to Draco—”
 
-This was apparently the last straw for Ron, who spun on Harry with eyes now aflame with outrage. ”*What?* Do you *know* who this is?”
+This was apparently the last straw for Ron, who spun on Harry with eyes now aflame with outrage. *“What?* Do you *know* who this is?”
 
 “Yes, Ron,” Harry said, “you may remember that I called him Draco without him needing to introduce himself.”
 
-Draco sniggered. Then his eyes lit on the white owl on Ron’s shoulder. “Oh, what’s *this?*” Draco said in a drawl rich with malice. “Where’s the famous Weasley family rat?”
+Draco sniggered. Then his eyes lit on the white owl on Ron’s shoulder. “Oh, what’s *this?”* Draco said in a drawl rich with malice. “Where’s the famous Weasley family rat?”
 
 “Buried in the backyard,” Ron said coldly.
 
@@ -257,7 +257,7 @@ Harry nodded, putting a thoughtful look on his face. “That sounds like good ad
 
 Harry nodded again. “If you don’t mind my asking, how did you recognise me?”
 
-”*Mister Bronze*,” Draco drawled, “I *have* met you, remember. I saw someone going around with a scarf wrapped around his head, looking absolutely ridiculous. So I took a *guess.*“
+*“Mister Bronze,”* Draco drawled, “I *have* met you, remember. I saw someone going around with a scarf wrapped around his head, looking absolutely ridiculous. So I took a *guess.”*
 
 Harry bowed his head, accepting the compliment. “I’m *terribly* sorry about that,” Harry said. “Our first meeting, I mean. I didn’t mean to embarrass you in front of Lucius.”
 
@@ -275,7 +275,7 @@ Harry nodded. “I’m glad to hear you’re not in trouble.”
 
 Draco smirked. “Father has, um, a *refined* sense of humor, but he *does* understand making friends. He understands it *very* well. He made me repeat that before I went to bed every night for the last month, ‘I will make friends at Hogwarts.’ When I explained everything to him and he saw that’s what I was doing, he bought me an ice-cream.”
 
-Harry’s jaw dropped. ”*You managed to spin that into an ice-cream?*”
+Harry’s jaw dropped. *“You managed to spin that into an ice-cream?”*
 
 Draco nodded, looking every bit as smug as the feat deserved. “Well, father *knew* what I was doing, of course, but he’s the one who taught me *how* to do it, and if I grin the right way *while* I’m doing it, that makes it a father-son thing and then he *has* to buy me an ice-cream or I’ll give him this sort of sad look, like I think I must have disappointed him.”
 
@@ -309,7 +309,7 @@ Draco’s eyes had narrowed to slits. “McGonagall told you that, did she.”
 
 “No, she wouldn’t say *anything* to me about Lucius afterwards, except to stay away from him. So during the Incident at the Potions Shop, while Professor McGonagall was busy yelling at the shopkeeper and trying to get everything under control, I grabbed one of the customers and asked *them* about Lucius.”
 
-Draco’s eyes were wide again. “Did you *really?*”
+Draco’s eyes were wide again. “Did you *really?”*
 
 Harry gave Draco a puzzled look. “If I lied the first time, I’m not going to tell you the truth just because you ask twice.”
 
@@ -375,7 +375,7 @@ The stallholder was, in fact, leaning back and drinking out of one of the neon-g
 
 “Hold on,” Harry said.
 
-”*Oh come on!* That’s just, just *juvenile!*”
+*“Oh come on!* That’s just, just *juvenile!”*
 
 “No, I’m sorry Draco, I *have* to investigate this. What happens if I drink Comed-Tea while doing my best to keep the conversation completely serious?”
 
@@ -389,7 +389,7 @@ Draco groaned. “Are we *really* going to do this?”
 
 “Five Knuts the can,” the stallholder said.
 
-”*Five Knuts?* You can sell reality-manipulating fizzy drinks for *five Knuts the can?”* Harry reached into his pouch, said “four Sickles, four Knuts”, and slapped them down on the counter. “Two dozen cans please.”
+*“Five Knuts?* You can sell reality-manipulating fizzy drinks for *five Knuts the can?”* Harry reached into his pouch, said “four Sickles, four Knuts”, and slapped them down on the counter. “Two dozen cans please.”
 
 “I’ll also take one,” Draco sighed, and started to reach for his pockets.
 
@@ -422,7 +422,7 @@ No, he could afford to be a *little* patient. But honestly, Harry didn’t see h
 ##### *BOY-WHO-LIVED GETS*
 ##### *DRACO MALFOY PREGNANT*
 
-”*Gah!*” screamed Draco as bright green liquid sprayed all over him from Harry’s direction. Draco turned to Harry with fire in his eyes and grabbed his own can. “You son of a mudblood! Let’s see how *you* like being spat upon!” Draco took a deliberate swig from the can just as his own eyes caught sight of the headline.
+*“Gah!”* screamed Draco as bright green liquid sprayed all over him from Harry’s direction. Draco turned to Harry with fire in his eyes and grabbed his own can. “You son of a mudblood! Let’s see how *you* like being spat upon!” Draco took a deliberate swig from the can just as his own eyes caught sight of the headline.
 
 In sheer reflex action, Harry tried to block his face as the spray of liquid flew in his direction. Unfortunately he blocked using the hand containing the Comed-Tea, sending the rest of the green liquid to splash out over his shoulder.
 
@@ -487,15 +487,15 @@ Harry coughed again to clear his throat. “Draco, please please *please* don’
 
 “That makes sense,” Draco said, still looking a bit suspicious. “But anyway, it’s always smarter if it doesn’t go to the Aurors at all. If we’re careful only to do things that Healing Charms can fix, we can just Obliviate her afterwards and then do it all again next week.” Then the blonde-haired boy giggled, a youthful high-pitched sound. “Though just imagine her saying she’d been done by Draco Malfoy *and* the Boy-Who-Lived, not even *Dumbledore* would believe her.”
 
-*I am going to tear apart your pathetic little magical remnant of the Dark Ages into pieces smaller than its constituent atoms. ”*Actually, can we hold off on that? After I found out that headline came from a girl a year younger than me, I had a different thought for my revenge.”
+*I am going to tear apart your pathetic little magical remnant of the Dark Ages into pieces smaller than its constituent atoms. *“Actually, can we hold off on that? After I found out that headline came from a girl a year younger than me, I had a different thought for my revenge.”
 
 “Huh? Do tell,” Draco said, and started to take another swig of his Comed-Tea.
 
 Harry didn’t know if the enchantment worked more than once per can, but he *did* know he could avoid the blame, so he was careful to time it exactly right:
 
-“I was thinking *someday I’m going to marry that woman.*“
+“I was thinking *someday I’m going to marry that woman.”*
 
-Draco made a horrid ker-splutching sound and leaked green fluid out the corners of his mouth like a broken car radiator. ”*Are you nuts?*”
+Draco made a horrid ker-splutching sound and leaked green fluid out the corners of his mouth like a broken car radiator. *“Are you nuts?”*
 
 “Quite the opposite, I’m so sane it burns like ice.”
 
@@ -539,17 +539,17 @@ A wide smile crossed Draco’s face. “You really should meet Father and ask *h
 
 “Persuasive,” Harry said, meaning it descriptively rather than normatively. It was a standard pattern: The Fall from Grace, the need to guard what purity remained against contamination, the past sloping upwards and the future sloping only down. And that pattern also had its *counter*… “I have to correct you on one point of fact, though. Your information about the Muggles is a bit out of date. We aren’t exactly scratching at the dirt anymore.”
 
-Draco’s head snapped around. ”*What?* What do you mean, *we?*”
+Draco’s head snapped around. *“What?* What do you mean, *we?”*
 
 “We. The scientists. The line of Francis Bacon and the blood of the Enlightenment. Muggles didn’t just sit around crying about not having wands, we have our *own* powers now, with or without magic. If all your powers fail then we will all have lost something very precious, because your magic is the only hint we have as to how the universe must *really* work—but you won’t be left scratching at the ground. Your houses will still be cool in summer and warm in winter, there will still be doctors and medicine. Science can keep you alive if magic fails. It’d be a tragedy, but not literally the end of all the light in the world. Just saying.”
 
-Draco had backed up several feet and his face was full of mixed fear and disbelief. ”*What in the name of Merlin are you talking about, Potter?*”
+Draco had backed up several feet and his face was full of mixed fear and disbelief. *“What in the name of Merlin are you talking about, Potter?”*
 
 “Hey, I listened to *your* story, won’t you listen to mine?” *Clumsy,* Harry chided himself, but Draco actually did stop backing off and seem to listen.
 
 “Anyway,” Harry said, “I’m saying that you don’t seem to have been paying much attention to what goes on in the Muggle world.” Probably because the whole wizarding world seemed to regard the rest of Earth as a slum, deserving around as much news coverage as the *Financial Times* awarded to the routine agonies of Burundi. “All right. Quick check. Have wizards ever been to the Moon? You know, that thing?” Harry pointed up to that huge and distant globe.
 
-”*What?*” Draco said. It was pretty clear the thought had never occured to the boy. ”*Go* to the—it’s just a—” His finger pointed at the little pale thingy in the sky. “You can’t Apparate to somewhere you’ve never *been* and how would anyone get to the Moon in the *first* place?”
+*“What?”* Draco said. It was pretty clear the thought had never occurred to the boy. *“Go* to the—it’s just a—” His finger pointed at the little pale thingy in the sky. “You can’t Apparate to somewhere you’ve never *been* and how would anyone get to the Moon in the *first* place?”
 
 “Hold on,” Harry said to Draco, “I’d like to show you a book I brought with me, I think I remember what box it’s in.” And Harry stood up and kneeled down and yanked out the stairs to the cavern level of his trunk, then tore down the stairs and heaved a box off another box, coming perilously close to treating his books with disrespect, and snatched off the box cover and quickly but carefully pried out a stack of books—
 
@@ -564,7 +564,7 @@ That picture.
 
 *The* picture, if only one picture in all the world were to survive.
 
-”*That*,” Harry said, his voice trembling because he couldn’t quite keep the pride out, “is what the Earth looks like from the Moon.”
+*“That,”* Harry said, his voice trembling because he couldn’t quite keep the pride out, “is what the Earth looks like from the Moon.”
 
 Draco slowly leaned over. There was a strange expression on his young face. “If that’s a *real* picture, why isn’t it moving?”
 
@@ -574,7 +574,7 @@ Draco’s finger moved to one of the suits. “What are those?” His voice star
 
 “Those are human beings. They are wearing suits that cover their whole bodies to give them air, because there is no air on the Moon.”
 
-“That’s impossible,” Draco whispered. There was terror in his eyes, and utter confusion. “No Muggle could ever do that. *How…*“
+“That’s impossible,” Draco whispered. There was terror in his eyes, and utter confusion. “No Muggle could ever do that. *How…”*
 
 Harry took back the book, flipped the pages until he found what he saw. “This is a rocket going up. The fire pushes it higher and higher, until it gets to the Moon.” Flipped pages again. “This is a rocket on the ground. That tiny speck next to it is a person.” Draco gasped. “Going to the Moon cost the equivalent of… probably around a thousand million Galleons.” Draco choked. “And it took the efforts of… probably more people than live in all of magical Britain.” *And when they arrived, they left a plaque that said, ‘We came in peace, for all mankind.’ Though you’re not yet ready to hear those words, Draco Malfoy…*
 
@@ -582,7 +582,7 @@ Harry took back the book, flipped the pages until he found what he saw. “This 
 
 “How, without wands or magic? It’s a long story, Draco. Science doesn’t work by waving wands and chanting spells, it works by knowing how the universe works on such a deep level that you know exactly what to do in order to make the universe do what you want. If magic is like casting *Imperio* on someone to make them do what you want, then science is like knowing them so well that you can convince them it was their own idea all along. It’s a lot more difficult than waving a wand, but it works when wands fail, just like if the *Imperius* failed you could still try persuading a person. And Science builds from generation to generation. You have to really *know* what you’re doing to do science—and when you really understand something, you can explain it to someone else. The greatest scientists of one century ago, the brightest names that are still spoken with reverence, their powers are as *nothing* to the greatest scientists of today. There is no equivalent in science of your lost arts that raised Hogwarts. In science our powers wax by the year. And we are beginning to understand and unravel the secrets of life and inheritance. We’ll be able to look at the very blood of which you spoke, and see what makes you a wizard, and in one or two more generations, we’ll be able to persuade that blood to make all your children powerful wizards too. So you see, your problem isn’t nearly as bad as it looks, because in a few more decades, science will be able to solve it for you.”
 
-“But…” Draco said. His voice was trembling. “If *Muggles* have that kind of power… then… what are *we?*”
+“But…” Draco said. His voice was trembling. “If *Muggles* have that kind of power… then… what are *we?”*
 
 “No, Draco, that’s not it, don’t you see? Science taps the power of human understanding to look at the world and figure out how it works. It can’t fail without humanity itself failing. Your magic could turn off, and you would hate that, but you would still be *you*. You would still be alive to regret it. But because science rests upon my human intelligence, it is the power that cannot be removed from me without removing *me.* Even if the laws of the universe change on me, so that all my knowledge is void, I’ll just figure out the new laws, as has been done before. It’s not a *Muggle* thing, it’s a *human* thing, it just refines and trains the power you use every time you look at something you don’t understand and ask ‘Why?’ You’re of Slytherin, Draco, don’t you see the implication?”
 
