--- a/009.md
+++ b/009.md
@@ -49,7 +49,7 @@ For once Hermione didn’t answer this instantly; she was shifting constantly fr
 
 “Yes, he is,” said one of the prefects who’d accompanied them, a young woman wearing the blue of Ravenclaw. Miss Clearwater, if Harry recalled correctly. Her voice was quiet, but conveyed a tinge of pride. “That is the Charms Professor of Hogwarts, Filius Flitwick, the most knowledgeable Charms Master alive, and a past Duelling Champion—”
 
-“Why’s he so *short?”* hissed a student whose name Harry didn’t recall. “Is he a *halfbreed?*“
+“Why’s he so *short?”* hissed a student whose name Harry didn’t recall. “Is he a *halfbreed?”*
 
 A chill glance from the young lady prefect. “The Professor does indeed have goblin ancestry—”
 
@@ -121,7 +121,7 @@ And Harry Potter walked forwards. Much too slowly, he realised once he’d begun
 
 * * * * *
 
-“*Harry Potter! Harry Potter! HARRY POTTER!*“
+*“Harry Potter! Harry Potter! HARRY POTTER!”*
 
 With all too good a notion of what she would see, Minerva McGonagall turned to look behind herself at the rest of the Head Table.
 
