--- a/013.md
+++ b/013.md
@@ -364,7 +364,7 @@ Then Harry caught sight of the note on the bottom of the pan.
 
 “Hold on,” Harry said, and darted forward to pick up the note. “This note’s for me, I think—”
 
-”*You,”* growled the largest Slytherin, “*you, are, going, to—”*
+*“You,”* growled the largest Slytherin, *“you, are, going, to—”*
 
 *“Look* at this!” shouted Harry, brandishing the note at the older Slytherin. “I mean, just *look* at this! Can you believe I’m being charged 30 points for shipping and handling on one lousy pie? 30 points! I’m turning a loss on the deal even after rescuing an innocent boy in distress! And storage fees? Conveyance charges? Drayage costs? How do you get *drayage costs* on a *pie?”*
 
