--- a/014.md
+++ b/014.md
@@ -61,7 +61,7 @@ Professor McGonagall sat there with her mouth open, staring at him like he’d j
 
 That sounded about right. Although… “A Hufflepuff would’ve said the same thing.”
 
-McGonagall paused, struck. “*That’s* true.”
+McGonagall paused, struck. *“That’s* true.”
 
 “Sorting Hat offered me Hufflepuff.”
 
@@ -161,7 +161,7 @@ Professor McGonagall pursed her lips. “I understand that it can be quite disco
 
 She smiled tolerantly. “Mr. Potter, I think I’d remember hearing if *that* had ever happened.”
 
-“*THAT IS NOT REASSURING! HAVEN’T YOU PEOPLE EVER HEARD OF THE ANTHROPIC PRINCIPLE? AND WHAT IDIOT EVER BUILT ONE OF THESE THINGS FOR THE FIRST TIME?*”
+*“THAT IS NOT REASSURING! HAVEN’T YOU PEOPLE EVER HEARD OF THE ANTHROPIC PRINCIPLE? AND WHAT IDIOT EVER BUILT ONE OF THESE THINGS FOR THE FIRST TIME?*”
 
 Professor McGonagall actually laughed. It was a pleasant, glad sound that seemed surprisingly out of place on that stern face. “You’re having another ‘you turned into a cat’ moment, aren’t you, Mr. Potter. You probably don’t want to hear this, but it’s quite endearingly cute.”
 
@@ -171,7 +171,7 @@ Realisation struck Harry a pile-driver blow.
 
 It all made sense now. It all *finally* made sense.
 
-“*SO THAT’S HOW THE COMED-TEA WORKS!* Of *course!* The spell doesn’t *force* funny events to happen, it just makes you *feel an impulse to drink* right before funny things are going to happen anyway! I’m such a fool, I should have realised when I felt the impulse to drink the Comed-Tea before Dumbledore’s second speech, *didn’t* drink it, and then choked on my own saliva instead—drinking the Comed-Tea doesn’t cause the comedy, the comedy causes you to drink the Comed-Tea! I saw the two events were correlated and assumed the Comed-Tea had to be the cause and the comedy had to be the effect because I thought temporal order restrained causation and causal graphs had to be acyclic BUT IT ALL MAKES SENSE ONCE YOU DRAW THE CAUSAL ARROWS GOING *BACKWARDS IN TIME!”*
+*“SO THAT’S HOW THE COMED-TEA WORKS!* Of *course!* The spell doesn’t *force* funny events to happen, it just makes you *feel an impulse to drink* right before funny things are going to happen anyway! I’m such a fool, I should have realised when I felt the impulse to drink the Comed-Tea before Dumbledore’s second speech, *didn’t* drink it, and then choked on my own saliva instead—drinking the Comed-Tea doesn’t cause the comedy, the comedy causes you to drink the Comed-Tea! I saw the two events were correlated and assumed the Comed-Tea had to be the cause and the comedy had to be the effect because I thought temporal order restrained causation and causal graphs had to be acyclic BUT IT ALL MAKES SENSE ONCE YOU DRAW THE CAUSAL ARROWS GOING *BACKWARDS IN TIME!”*
 
 Realisation struck Harry the *second* pile-driver.
 
