--- a/023.md
+++ b/023.md
@@ -176,7 +176,7 @@ And Harry Potter’s voice came, now louder, and worried:
 
 “Draco… you *can’t* forget. Don’t you understand? That was your sacrifice.”
 
-Draco stopped in midstride and turned around. “*What* are you talking about?”
+Draco stopped in midstride and turned around. *“What* are you talking about?”
 
 But there was already a freezing coldness in Draco’s spine.
 
@@ -196,13 +196,13 @@ Harry Potter shook his head. His voice came in a whisper. “Draco… I’m sorr
 
 “Scientists can do tests to check for sure if someone is the true child of a father. Granger would probably do it if I paid her family enough. *She* wouldn’t be afraid of the results. So what do you expect that test to show? Tell me to run it and we will. But you already know what the test will say. You’ll always know. You won’t ever be able to forget. You might *wish* you believed in blood purism, but you’ll always *expect to see happen* just exactly what would happen if there was only one thing that made you a wizard. That was your sacrifice to become a scientist.”
 
-Draco’s breathing was ragged. “Do you realise *what you’ve done?”* Draco surged forward and he seized Harry by the collar of his robes. His voice rose to a scream, it sounded unbearably loud in the closed classroom and the silence. “*Do you realise what you’ve done?”*
+Draco’s breathing was ragged. “Do you realise *what you’ve done?”* Draco surged forward and he seized Harry by the collar of his robes. His voice rose to a scream, it sounded unbearably loud in the closed classroom and the silence. *“Do you realise what you’ve done?”*
 
 Harry’s voice was shaky. “You had a belief. The belief was false. I helped you see that. What’s true is already so, owning up to it doesn’t make it worse—”
 
 The fingers on Draco’s right hand clenched into a fist and that hand dropped down and blasted up unstoppably and punched Harry Potter in the jaw so hard that his body went crashing back into a desk and then to the floor.
 
-*“Idiot!”* screamed Draco. “*Idiot! Idiot!”*
+*“Idiot!”* screamed Draco. *“Idiot! Idiot!”*
 
 “Draco,” whispered Harry from the floor, “Draco, I’m sorry, I didn’t think this would happen for months, I didn’t expect you to awaken as a scientist this quickly, I thought I would have longer to prepare you, teach you the techniques that make it hurt less to admit you’re wrong—”
 
@@ -222,11 +222,11 @@ And then the real anger started to rise.
 
 Harry flinched. The boy opened his mouth, as if to say ‘I’m sorry’, and then closed his mouth, seeming to think better of it, which was either very smart of him or very lucky, because Draco might have tried to kill him.
 
-“You should have warned me,” Draco said. His voice rose. “*You should have warned me!”*
+“You should have warned me,” Draco said. His voice rose. *“You should have warned me!”*
 
 “I… I did… every time I told you about the power, I told you about the price. I said, you have to admit you’re wrong. I said this would be the hardest path for you. That this was the sacrifice anyone had to make to become a scientist. I said, what if the experiment says one thing and your family and friends say another—”
 
-*“You call that a warning?* ” Draco was screaming now. “*You call that a warning? When we’re doing a ritual that calls for a permanent sacrifice?”*
+*“You call that a warning?* ” Draco was screaming now. *“You call that a warning? When we’re doing a ritual that calls for a permanent sacrifice?”*
 
 “I… I…” The boy on the floor swallowed. “I guess maybe it wasn’t clear. I’m sorry. But that which can be destroyed by the truth should be.”
 
