--- a/025.md
+++ b/025.md
@@ -123,7 +123,7 @@ There was a long quiet in the office, broken only by the tiny puffs and whistles
 
 “Dear me,” said the old wizard, “I *do* feel silly. And *here* I was expecting you might try to redeem the heir of Malfoy by, say, *showing him true friendship and kindness.*”
 
-“*Ha!* Yeah, like *that* would have worked.”
+*“Ha!* Yeah, like *that* would have worked.”
 
 The old wizard sighed. This was taking it too far. “Tell me, Harry. Did it even *occur* to you that there was something *incongruous* about setting out to redeem someone through lies and trickery?”
 
@@ -209,7 +209,7 @@ The man in her pathway matched the movement so perfectly that it was like neithe
 
 Rita’s eyes narrowed. “Who do you think you are?”
 
-“How very foolish,” the man said dryly. “It would have been wise to memorise the face of the disguised Death Eater training Harry Potter to be the next Dark Lord. After all,” a thin smile, “*that* certainly sounds like someone you wouldn’t want to run into on the street, especially after doing a hatchet job on him in the newspaper.”
+“How very foolish,” the man said dryly. “It would have been wise to memorise the face of the disguised Death Eater training Harry Potter to be the next Dark Lord. After all,” a thin smile, *“that* certainly sounds like someone you wouldn’t want to run into on the street, especially after doing a hatchet job on him in the newspaper.”
 
 Rita took a moment to place the reference. *This* was Quirinus Quirrell? He looked too young and too old at the same time; his face, if it relaxed from its severe and condescending pose, would belong to someone in his late thirties. And his hair was already falling out? Couldn’t he afford a healer?
 
@@ -277,7 +277,7 @@ Grins slowly started on the faces of Fred and George.
 
 “Start rumours about ourselves,” they replied.
 
-“*Exactly,*” said Harry, grinning widely. “But these can’t be just *any* rumours. I want to teach people never to believe what the newspaper says about Harry Potter, any more than Muggles believe what the newspaper says about Elvis. At first I just thought about flooding Rita Skeeter with so many rumours that she wouldn’t know what to believe, but then she’ll just cherry-pick the ones that sound plausible and bad. So what I want you to do is create a fake story about me, and get Rita Skeeter to believe it somehow. But it has to be something that, afterward, everyone will *know* was fake. We want to fool Rita Skeeter and her editors, and *afterward* have the proof come out that it was false. And of course—given that those are the requirements—the story has to be as *ridiculous* as it can possibly be, and still get printed. Do you understand what I want you to do?”
+*“Exactly,*” said Harry, grinning widely. “But these can’t be just *any* rumours. I want to teach people never to believe what the newspaper says about Harry Potter, any more than Muggles believe what the newspaper says about Elvis. At first I just thought about flooding Rita Skeeter with so many rumours that she wouldn’t know what to believe, but then she’ll just cherry-pick the ones that sound plausible and bad. So what I want you to do is create a fake story about me, and get Rita Skeeter to believe it somehow. But it has to be something that, afterward, everyone will *know* was fake. We want to fool Rita Skeeter and her editors, and *afterward* have the proof come out that it was false. And of course—given that those are the requirements—the story has to be as *ridiculous* as it can possibly be, and still get printed. Do you understand what I want you to do?”
 
 “Not exactly...” Fred or George said slowly. “You want us to *invent* the story?”
 
