--- a/032.md
+++ b/032.md
@@ -11,7 +11,7 @@ Harry’s mouth opened and no sound came out. He was, literally, speechless.
 
 “I will permit you to withdraw five Galleons for Christmas presents,” said Dumbledore, “which is more than any boy your age should spend, but poses no threat, I think—”
 
-“*I can’t believe you just said that!”* the words burst out of Harry’s mouth. “You *admit* to being that manipulative?”
+*“I can’t believe you just said that!”* the words burst out of Harry’s mouth. “You *admit* to being that manipulative?”
 
 “Manipulative?” said the old wizard, smiling slightly. “No, manipulative would be if I did *not* admit it, or if I had some deeper motive behind the obvious. This is quite straightforward, Harry. You are not yet ready to play the game, and it would be foolish to allow you thousands of Galleons with which to upset the gameboard.”
 
@@ -35,7 +35,7 @@ This failed to impress Professor Quirrell.
 
 Professor Quirrell made a thoughtful humming sound. “You could ask which family members they most dislike, and then hire an assassin. I know someone from a certain government-in-exile who is quite competent, and he would give you a discount on multiple Weasleys.”
 
-“*This* Christmas,” Harry said, dropping his voice into a lower register, “give your friends the gift... of *death*.”
+*“This* Christmas,” Harry said, dropping his voice into a lower register, “give your friends the gift... of *death*.”
 
 That made Professor Quirrell smile. It went all the way to his eyes.
 
@@ -57,7 +57,7 @@ Harry clapped his hands together in involuntary excitement. Just put the money o
 
 Professor Quirrell did not look like he appreciated the compliment. “I suppose I can tolerate Christmas in *that* spirit, Mr. Potter, though only barely.” Then he smiled slightly. “Of course that will cost you fourteen Galleons, and you only have five.”
 
-“*Five* Galleons,” Harry said, with a sniff of outrage. “Just who does the Headmaster think he’s dealing with, anyway?”
+*“Five* Galleons,” Harry said, with a sniff of outrage. “Just who does the Headmaster think he’s dealing with, anyway?”
 
 “I think,” said Professor Quirrell, “that it simply did not occur to him to fear the consequences if you turned your ingenuity to the task of obtaining funds. Though you were wise to lose, rather than making it an explicit threat. Out of curiosity, Mr. Potter, what *would* you have done if I hadn’t turned away in boredom while you, in a fit of childish pique, counted out five Galleons worth of Knuts?”
 
