--- a/034.md
+++ b/034.md
@@ -59,7 +59,7 @@ Granger’s face was angry, and getting angrier. “Mr. Potter,” she said in a
 
 “Most certainly not,” Harry Potter said calmly. “I won’t make you do it every time. Beat me once, and I’ll stay beaten. But threats aren’t always enough, General of Sunshine. You did not ask me to join with you, but tried simply to impose your will; and sometimes you must actually defeat the enemy, to impose your will on him. You see, I am skeptical that Hermione Granger, the brightest academic star of Hogwarts, and Draco, son of Lucius, scion of the Noble and Most Ancient House of Malfoy, can work together to beat their common foe, Harry Potter.” An amused smile crossed Harry Potter’s face. “Maybe I’ll just do what Draco tried with Zabini, and write a letter to Lucius Malfoy and see what *he* thinks about that.”
 
-“*Harry!”* gasped Granger, looking absolutely aghast, and there were gasps from the audience as well.
+*“Harry!”* gasped Granger, looking absolutely aghast, and there were gasps from the audience as well.
 
 Draco controlled the anger flushing through him. That had been a *stupid* move on Harry’s part, saying that in public. If Harry had simply *done* it, it might have worked, Draco hadn’t even thought about that, but *now* if Father did that it would look like he was playing into Harry’s hands—
 
@@ -113,7 +113,7 @@ The Headmaster rose from his seat, his face now stern, saying no word as yet; bu
 
 “I do not say *what* threat will come,” said Professor Quirrell. “But you will not live all your lives in peace, not if the past history of the world is any guide at all to its future. And if you do in the future as you have seen three armies do this day, if you cannot throw aside your petty bickering and take the Mark of a single leader, then indeed you might wish that the Dark Lord had lived to rule over you, and regret the day that ever Harry Potter was born—”
 
-“*Enough!”* bellowed Albus Dumbledore.
+*“Enough!”* bellowed Albus Dumbledore.
 
 There was silence.
 
@@ -213,7 +213,7 @@ Harry Potter’s gaze moved to Dumbledore, and he looked considering for a momen
 
 “Yes,” said Harry Potter, “it was pretty difficult coming up with a wish to symbolise the costs of unity. But the problem of acting together isn’t just for wars, it’s something we have to solve all our lives, every day. If everyone is coordinating using the same rules, and the rules are stupid, then if *one* person decides to do things differently, they’re breaking the rules. But if *everyone* decides to do things differently, they can. It’s exactly the same problem of everyone needing to act together. But for the *first* person who speaks out, it seems like they’re going against the crowd. And if you thought that the only important thing was that people should always be unified, then you could never change the game, no matter how stupid the rules. So my own wish, to symbolise what happens when people unite in the wrong direction, is that in Hogwarts we should play Quidditch without the Snitch.”
 
-“*WHAT?”* screamed a hundred voices in the crowd, as Draco’s jaw dropped.
+*“WHAT?”* screamed a hundred voices in the crowd, as Draco’s jaw dropped.
 
 “The Snitch ruins the whole game,” said Harry Potter. “Everything the other players do ends up being irrelevant. It would make overwhelmingly more sense to just buy a clock. It’s one of those incredibly stupid things you don’t notice just because you grew up with it, that people only do because everyone else is doing it—”
 
