--- a/038.md
+++ b/038.md
@@ -234,7 +234,7 @@ Draco looked *very* worried. His head kept darting around, despite the fact that
 
 Harry leaned back wearily in the small folding chair that sat at the bottom of his trunk’s cavern. “You know, Draco, just as the fundamental question of rationality is ‘What do I think I know and how do I think I know it?’, there’s also a cardinal sin, a way of thinking that’s the opposite of that. Like the ancient Greek philosophers. They had no clue what was going on, so they’d go around saying things like ‘All is water’ or ‘All is fire’, and they never asked themselves, ‘Wait a minute, even if everything *is* water, how could I possibly *know* that?’ They didn’t ask themselves if they had evidence which discriminated *that* possibility from all the *other* possibilities you could imagine, evidence they’d be very unlikely to encounter if the theory *wasn’t* true—”
 
-*“Harry,”* Draco said, his voice strained, “*What did you talk about with Father?”*
+*“Harry,”* Draco said, his voice strained, *“What did you talk about with Father?”*
 
 “I don’t know, actually,” said Harry, “so it’s very important that I *not* just make stuff up—”
 
