--- a/040.md
+++ b/040.md
@@ -45,7 +45,7 @@ Harry nodded.
 
 The curtains were taking on a faintly blue pattern, and a dim tracery of elaborate snowflakes now seemed to be becoming visible on the tablecloth. Professor Quirrell’s voice sounded very calm. “The Headmaster can be very persuasive, Mr. Potter. I hope he has not persuaded you.”
 
-“*Heck* no,” said Harry. “Didn’t fool me for a second.”
+*“Heck* no,” said Harry. “Didn’t fool me for a second.”
 
 “I should hope not,” said Professor Quirrell, still in that very calm tone. “I would be extremely put out to discover that the Headmaster had convinced you to throw away your life on some fool plot by telling you that death is the next great adventure.”
 
