--- a/044.md
+++ b/044.md
@@ -55,7 +55,7 @@ Hermione saw the looks of shock that crossed their faces.
 
 “He doesn’t mean it, does he?” Seamus said it like he was begging.
 
-“You don’t understand,” Hermione said, her voice breaking, “*that’s not Harry—”* and she shut up before she said anything more, but she *had* to say that much.
+“You don’t understand,” Hermione said, her voice breaking, *“that’s not Harry—”* and she shut up before she said anything more, but she *had* to say that much.
 
 She saw from the look on his face that Neville understood, and she also saw that the others didn’t. If Harry had really never thought anything like that, then being exposed to a Dementor for less than a minute wouldn’t have made him say it. That’s what they were probably thinking.
 
@@ -115,7 +115,7 @@ Then a person leaned over into the field of vision and did something completely 
 
 She heard the gasps around her, and they didn’t matter, she maintained the kiss on those chocolate-smeared lips as the tears welled in her eyes.
 
-And Harry’s arms came up and pushed her away, and his lips yelled, “*I told you, no kissing!”*
+And Harry’s arms came up and pushed her away, and his lips yelled, *“I told you, no kissing!”*
 
 * * * * *
 
