--- a/071.md
+++ b/071.md
@@ -331,7 +331,7 @@ month, and Su made like she was going to follow but Harry’s face turned
 toward her for a moment.
 
 It wasn’t until Harry had rounded a corner that he drew his wand, said
-in a low precise voice “*Quietus”* and then turned to Padma and said,
+in a low precise voice *“Quietus”* and then turned to Padma and said,
 “An interesting guess, Miss Patil.”
 
 Padma looked rather smug, then; and said, “I *should’ve* figured it out
