--- a/072.md
+++ b/072.md
@@ -46,7 +46,7 @@ The boy looked searchingly around them, not just to every side, but even upward 
 
 And then Harry stuck a hand in his pouch and said, “Invisibility cloak.”
 
-“*Gleep?”* said Hermione.
+*“Gleep?”* said Hermione.
 
 Harry was already drawing out folds of shimmering black fabric from the mokeskin device. “Don’t worry,” the boy said with a small grin, “they’re so rare that nobody bothered to make a school rule against them…”
 
@@ -236,7 +236,7 @@ The bullies were learning *already*, Susan realised, she hadn’t expected S.P.H
 
 Susan would have whispered to give up, to abort the plan, only there was no way to convey a message to—
 
-“*Silencio*,” said the bully in a soft, deliberate voice with his wand pointed toward the corridor, the blue haze of his Shielding Charm shimmering around him. *“Accio* victim.”
+*“Silencio*,” said the bully in a soft, deliberate voice with his wand pointed toward the corridor, the blue haze of his Shielding Charm shimmering around him. *“Accio* victim.”
 
 When the fourth-year boy came into their field of vision he was dangling upside down as if an invisible hand were holding him high by one leg, his red-trimmed robes beginning to slide down his thighs to reveal the pants beneath. His mouth was opening and closing helpessly, no sound coming out.
 
@@ -254,7 +254,7 @@ And in almost the same moment, there rang out the mighty and high-pitched voice 
 
 “In the name of Hogwarts,” cried Lavender’s voice, though they couldn’t see her, “and in the name of heroines everywhere, I command you to let go of that EEK!”
 
-“*Expelliarmus*,” said the bully. *“Stupefy*. *Accio* stupid heroine.”
+*“Expelliarmus*,” said the bully. *“Stupefy*. *Accio* stupid heroine.”
 
 When Lavender floated into their vision, dangling by one foot and unconscious, Susan blinked; the girl was dressed in a bright crimson-and-gold skirt and blouse, instead of her usual Hogwarts robes.
 
@@ -262,7 +262,7 @@ The bully was also giving the girl’s upside-down body an odd look, and then he
 
 Then the bully shrugged, and, still facing in the direction of Lavender instead of the dangling fourth-year boy, drew back his fist—
 
-“*Lagann!”* yelled five voices, and five green spirals blasted from five wands aimed through five holes in the false wall, and an instant later Hermione’s voice shouted *“Stupefy!* ”
+*“Lagann!”* yelled five voices, and five green spirals blasted from five wands aimed through five holes in the false wall, and an instant later Hermione’s voice shouted *“Stupefy!* ”
 
 Five green spirals shattered ineffectually on blue haze, and Hermione’s red bolt bounced off the haze and struck the fourth-year boy, who jerked and then was still.
 
@@ -400,7 +400,7 @@ And a voice said, “My apologies.”
 
 Daphne turned back to look, her mouth gaping open in absolute shock.
 
-“*Scourgify*,” said that smooth voice, and the mashed potatoes vanished from Hermione’s face, revealing the Ravenclaw’s surprised expression as Draco Malfoy approached her, sheathed his wand again, and then knelt to one knee beside her and offered her a hand.
+*“Scourgify*,” said that smooth voice, and the mashed potatoes vanished from Hermione’s face, revealing the Ravenclaw’s surprised expression as Draco Malfoy approached her, sheathed his wand again, and then knelt to one knee beside her and offered her a hand.
 
 “Sorry about that, Miss Granger,” said Draco Malfoy’s polite voice. “I guess someone thought they were being funny.”
 
@@ -456,7 +456,7 @@ Draco’s throat closed up. His brain was experiencing a hideous malfunction dur
 
 Then, “It’s probably some kind of tremendously clever scheme Malfoy’s got going,” said a fifth-year boy. “You know, like in *The Tragedy of Light*, where everything that looks like a setback is part of the plot. And it ends with Granger’s head on a stick and nobody suspecting that it was him.”
 
-“*That* makes sense,” someone said from further down the table, and there was a lot of nodding.
+*“That* makes sense,” someone said from further down the table, and there was a lot of nodding.
 
 * * * * *
 
