--- a/085.md
+++ b/085.md
@@ -236,7 +236,7 @@ Then cried out and leapt back and almost fell off the Ravenclaw tower; though th
 
 “And so it was done,” Albus Dumbledore said, almost in a whisper. “So it was done.” Fawkes was on his shoulder, staring at where the other phoenix had been with an indecipherable avian gaze.
 
-“*What are you doing here?”*
+*“What are you doing here?”*
 
 “Ah?” said the ancient man standing on the roof-platform’s opposite corner. “I felt the presence of a creature Hogwarts did not know, and came to see, of course.” Slowly the old wizard’s shaking hand came up to remove the half-moon glasses, his other hand wiped at his eyes and forehead with his robe’s sleeve. “I dared—I dared not speak—I knew, I knew this choice above all choices must be your own—”
 
