--- a/051.md
+++ b/051.md
@@ -23,15 +23,15 @@ Professor Quirrell finished his Charms—
 
 —blurred into a green snake, banded in blue and white—
 
-—hissed, “*Hungry, boy? Eat your fill sswiftly, we sshall need both sstrength and time.*”
+—hissed, *“Hungry, boy? Eat your fill sswiftly, we sshall need both sstrength and time.”*
 
-Harry’s eyes were a bit wide, but he hissed, “*I ate well at breakfasst,*” and then rapidly began forking noodles into his mouth.
+Harry’s eyes were a bit wide, but he hissed, *“I ate well at breakfasst,”* and then rapidly began forking noodles into his mouth.
 
-The snake watched him for a moment, with those flat eyes, and then hissed, “*Do not wissh to explain here. Prefer to be elssewhere firsst. Need to leave unobsserved, without ssign we have ever departed room.*”
+The snake watched him for a moment, with those flat eyes, and then hissed, *“Do not wissh to explain here. Prefer to be elssewhere firsst. Need to leave unobsserved, without ssign we have ever departed room.”*
 
-“*Sso no one can track uss,*” hissed Harry.
+*“Sso no one can track uss,”* hissed Harry.
 
-“*Yess. Do you trusst me that much, boy? Think before ansswer. I will have important requesst of you, which requiress trusst; if ssay no regardlesss, then ssay no now.*”
+*“Yess. Do you trusst me that much, boy? Think before ansswer. I will have important requesst of you, which requiress trusst; if ssay no regardlesss, then ssay no now.”*
 
 Harry dropped his gaze from the snake’s flat eyes, and looked back down at his sauce-coated noodles, and ate another bite, then another, while he thought.
 
@@ -45,7 +45,7 @@ And if there was sometimes a cold atmosphere about the Defence Professor, bitter
 
 Harry didn’t quite know how to describe in words the sense of kinship he felt with Professor Quirrell, except to say that the Defence Professor was the only *clear-thinking* person Harry had met in the wizarding world. Sooner or later everyone else started playing Quidditch, or not putting protective shells on their time machines, or thinking that Death was their friend. It didn’t matter how good their intentions were. Sooner or later, and usually sooner, they demonstrated that something deep inside their brain was confused. Everyone except Professor Quirrell. It was a bond that went beyond anything of debts owed, or even anything of personal liking, that the two of them were alone in the wizarding world. And if the Defence Professor occasionally seemed a little scary or a little Dark, well, that was just the same thing some people said about Harry.
 
-“*I trusst you,*” hissed Harry.
+*“I trusst you,”* hissed Harry.
 
 And the snake explained the first stage of the plan.
 
@@ -119,7 +119,7 @@ The door clicked shut behind Harry, and then the darkness was pitch and complete
 
 *Step ten.*
 
-Harry took out his wand and said “*Lumos*”, lighting the room with white glow; he took his pouch from his belt (the sense of doom growing a little sharper as he grasped it with his fingers) and lightly tossed it to the opposite side of the room (the sense of doom fading almost completely). And then he began to take off the Cloak of Invisibility, even as his voice hissed, *“It iss done.*”
+Harry took out his wand and said *“Lumos”*, lighting the room with white glow; he took his pouch from his belt (the sense of doom growing a little sharper as he grasped it with his fingers) and lightly tossed it to the opposite side of the room (the sense of doom fading almost completely). And then he began to take off the Cloak of Invisibility, even as his voice hissed, *“It iss done.”*
 
 *Step eleven.*
 
@@ -153,7 +153,7 @@ There was a slight pause.
 
 *Darn,* thought Harry. Still, Professor Quirrell hadn’t *denied* it… “Go on.”
 
-“Before I do,” said Professor Quirrell. There was no levity in his voice, now. “*Are* you open to such requests, Mr. Potter? I say again that if you are likely to say no regardless, you must say no now. If your curiosity impels you otherwise, squash it.”
+“Before I do,” said Professor Quirrell. There was no levity in his voice, now. *“Are* you open to such requests, Mr. Potter? I say again that if you are likely to say no regardless, you must say no now. If your curiosity impels you otherwise, squash it.”
 
 “Treasonous and illegal doesn’t bother me,” said Harry. “Risks bother me and the stakes would need to be commensurate, but I can’t imagine *you* taking risks frivolously.”
 
